3.1.0

Support for APIFlowAfterExecute (Flow/Structured Discussions) is dropped, as it is unmaintained and will be removed from Miraheze.

Feature:
* Added support for embedding images on image uploads.
* Added a boolean configuration option for image embedding ($wgDiscordNotificationShowImage), defaults to true.

Refactor:
* BREAKING CHANGE: Individual config variables for action types have been condensed into a single one: DiscordNotificationEnabledActions. This includes:
** DiscordNotificationNewUser
** DiscordNotificationBlockedUser
** DiscordNotificationUserGroupsChanged
** DiscordNotificationAddedArticle
** DiscordNotificationRemovedArticle
** DiscordNotificationUnremovedArticle
** DiscordNotificationMovedArticle
** DiscordNotificationEditedArticle
** DiscordNotificationProtectedArticle
** DiscordNotificationAfterImportPage
** DiscordNotificationModerationPending
** DiscordNotificationFileUpload
* Added property type declarations and initialize them.
* Added return types to hook functions.
* Deduplicated DiscordNotifier::getDiscordUserText() code.

Fix:
* Set DiscordNotificationShowSuppressed to false by default.
* DiscordNotifier::parseurl() no longer parses out unnecessary symbols, causing broken URLs.
* Skip notifying imports when no revisions were imported.