@@ -23,9 +23,9 @@ class DiscordEmbedBuilder {
 	/**
 	 * The color of the embed.
 	 *
-	 * @var string
+	 * @var int
 	 */
-	private string $color = '';
+	private int $color = 0;
 
 	/**
 	 * The username to display with the embed.
@@ -117,10 +117,10 @@ class DiscordEmbedBuilder {
 	/**
 	 * Sets the color of the embed.
 	 *
-	 * @param string $color The color to set, in hexadecimal format.
+	 * @param int $color The color to set, in hexadecimal format.
 	 * @return self
 	 */
-	public function setColor( string $color ): self {
+	public function setColor( int $color ): self {
 		$this->color = $color;
 
 		return $this;
