@@ -115,13 +115,13 @@ class DiscordNotifier {
 		$message = str_replace( [ "\r", "\n" ], '', $message );
 
 		$color = match ( $action ) {
-			'article_saved', 'import_complete', 'user_groups_changed', 'moderation_pending' => '2993970',
-			'article_inserted', 'file_uploaded', 'new_user_account' => '3580392',
-			'article_deleted', 'user_blocked' => '15217973',
-			'article_undeleted' => '15263797',
-			'article_moved' => '14038504',
-			'article_protected' => '3493864',
-			default => '11777212',
+			'article_saved', 'import_complete', 'user_groups_changed', 'moderation_pending' => 2993970,
+			'article_inserted', 'file_uploaded', 'new_user_account' => 3580392,
+			'article_deleted', 'user_blocked' => 15217973,
+			'article_undeleted' => 15263797,
+			'article_moved' => 14038504,
+			'article_protected' => 3493864,
+			default => 11777212,
 		};
 
 		$embed = ( new DiscordEmbedBuilder() )
